--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     {
       "name": "Ryan Grenz",
       "email": "info@ryangrenz.com"
+    },
+    {
+      "name": "Carlos Lopez",
+      "email": "cjlc@hotmail.com"
     }
   ],
   "name": "stomp-client",
   "description": "A STOMP protocol implementation in node.js",
-  "version": "0.9.0",
+  "version": "0.9.1",
   "repository": {
-    "url": "http://github.com/easternbloc/node-stomp-client"
+    "url": "http://github.com/CJX3M/node-stomp-client"
   },
   "main": "lib/client.js",
   "engines": {
